[gd_scene load_steps=12 format=2]

[ext_resource path="res://Theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://files/empty.png" type="Texture" id=3]
[ext_resource path="res://files/Attack.png" type="Texture" id=4]
[ext_resource path="res://files/Club.png" type="Texture" id=5]
[ext_resource path="res://files/Defend.png" type="Texture" id=6]
[ext_resource path="res://files/Background2.png" type="Texture" id=7]
[ext_resource path="res://files/Background3.png" type="Texture" id=8]
[ext_resource path="res://Theme/Lampshade.otf" type="DynamicFontData" id=9]
[ext_resource path="res://files/temp_player.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
dice_images = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0

[node name="background1" type="TextureRect" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="background2" type="TextureRect" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="Highscore" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -80.0
margin_right = 100.0
margin_bottom = -16.0
rect_min_size = Vector2( 200, 64 )
text = "Highsore:"
align = 1

[node name="Lost" type="AcceptDialog" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -32.5
margin_right = 41.5
margin_bottom = 32.5
theme = ExtResource( 1 )
dialog_text = "You lost. Try again ?"
dialog_hide_on_ok = false

[node name="Won" type="AcceptDialog" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -44.5
margin_right = 216.5
margin_bottom = 44.5
window_title = ""
dialog_text = "Congrats you Won.
You could tweet the screenshot to
 @saridat42."

[node name="Title" type="Label" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 770.0
margin_bottom = 96.0
rect_min_size = Vector2( 738, 64 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Player" type="Control" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 384.0
margin_bottom = 584.0

[node name="PlayerImage" type="TextureRect" parent="Player"]
margin_left = 24.0
margin_top = 24.0
margin_right = 344.0
margin_bottom = 344.0
texture = ExtResource( 10 )

[node name="game" type="HBoxContainer" parent="Player"]
margin_left = 16.0
margin_top = 352.0
margin_right = 384.0
margin_bottom = 416.0
alignment = 1

[node name="1" type="TextureRect" parent="Player/game"]
margin_left = 50.0
margin_right = 114.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="Player/game"]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="3" type="TextureRect" parent="Player/game"]
visible = false
margin_left = 166.0
margin_right = 230.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true

[node name="health" type="ProgressBar" parent="Player/game"]
margin_left = 186.0
margin_right = 250.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
max_value = 32.0
step = 1.0
value = 32.0
rounded = true

[node name="Roll" type="Button" parent="Player/game"]
margin_left = 254.0
margin_right = 318.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "Roll"

[node name="PlayerName" type="Label" parent="Player"]
margin_left = 16.0
margin_top = 420.0
margin_right = 272.0
margin_bottom = 484.0
rect_min_size = Vector2( 256, 64 )
align = 1
valign = 1

[node name="Boss" type="Control" parent="."]
margin_left = 416.0
margin_top = 96.0
margin_right = 784.0
margin_bottom = 584.0

[node name="BossImage" type="TextureRect" parent="Boss"]
margin_left = 23.5367
margin_top = 23.5367
margin_right = 343.537
margin_bottom = 343.537

[node name="game" type="HBoxContainer" parent="Boss"]
margin_top = 352.0
margin_right = 368.0
margin_bottom = 416.0
alignment = 1

[node name="health" type="ProgressBar" parent="Boss/game"]
margin_left = 50.0
margin_right = 114.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
max_value = 32.0
step = 1.0
value = 32.0
rounded = true

[node name="1" type="TextureRect" parent="Boss/game"]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true

[node name="2" type="TextureRect" parent="Boss/game"]
margin_left = 186.0
margin_right = 250.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true

[node name="3" type="TextureRect" parent="Boss/game"]
margin_left = 254.0
margin_right = 318.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true

[node name="4" type="TextureRect" parent="Boss/game"]
visible = false
margin_left = 220.0
margin_right = 284.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true

[node name="BossName" type="Label" parent="Boss"]
margin_left = 80.0
margin_top = 420.0
margin_right = 336.0
margin_bottom = 484.0
align = 1
valign = 1

[connection signal="confirmed" from="ColorRect/Lost" to="." method="_on_Lost_confirmed"]
[connection signal="confirmed" from="ColorRect/Won" to="." method="_on_Lost_confirmed"]
[connection signal="button_down" from="Player/game/Roll" to="." method="_on_Roll_button_down"]
